# baji_poc

./: README.md  main.py  pyproject.toml
backgrounds/: i2v_tasks.json
static/: index.html
